--- a/css/list-writers.css
+++ b/css/list-writers.css
@@ -18,12 +18,12 @@ input {
   margin-bottom: 20px;
   margin-right: 5px;
   border-radius: 5px;
-  color: rgb(160, 162, 165);
+  color: rgb(130, 122, 175);
   border: 2px solid #343a3f;
 }
 input[type="text"] {
   display: flex;
-  width: 400px;
+  width: 40%;
   padding: 10px;
   font-size: 19px;
   outline: none;
@@ -32,20 +32,29 @@ input[type="text"] {
   background-position: 6px;
   padding-left: 30px;
 }
-input[type="button"] {
-  display: flex;
-  width: 100px;
-}
+input[type="button"],
 input[type="submit"] {
   display: flex;
   width: 100px;
+  font-size: smaller;
+}
+/* input[type="submit"] {
+  display: flex;
+  width: 100px;
+} */
+input[type="button"]:hover,
+input[type="submit"]:hover {
+  display: flex;
+  width: 100px;
+  background-color: #a4ebdb;
+  color: #2d1919;
 }
 /**
 serch form end
 */
 
 .content {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   background-color: #a4ebdb;
   align-items: center;
@@ -55,6 +64,7 @@ serch form end
   padding: 20px 0;
   border-bottom: 2px solid #ffffff;
   width: 1000px;
+  margin: auto;
 }
 .left-part {
   margin-left: 30px;
