--- a/css/list-writers.css
+++ b/css/list-writers.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: #827aaf;
+  /* background-color: #827aaf; */
 }
 /**
 serch form
@@ -56,13 +56,13 @@ serch form end
 .content {
   /* display: flex; */
   flex-direction: column;
-  background-color: #a4ebdb;
+  /* background-color: #a4ebdb; */
   align-items: center;
 }
 .writer {
   display: flex;
   padding: 20px 0;
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid #343a3f;
   width: 1000px;
   margin: auto;
 }
