--- a/css/list-writers.css
+++ b/css/list-writers.css
@@ -12,17 +12,7 @@
 /**
 serch form
 */
-input {
-  display: flex;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-right: 5px;
-  border-radius: 5px;
-  color: rgb(130, 122, 175);
-  border: 2px solid #343a3f;
-}
 input[type="text"] {
-  display: flex;
   width: 40%;
   padding: 10px;
   font-size: 19px;
@@ -31,69 +21,63 @@ input[type="text"] {
   background-repeat: no-repeat;
   background-position: 6px;
   padding-left: 30px;
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 5px;
+  border-radius: 5px;
+  color: rgb(130, 122, 175);
+  border: 2px solid #343a3f;
 }
-input[type="button"],
-input[type="submit"] {
-  display: flex;
+button[type="button"] {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 5px;
+  border-radius: 5px;
+  color: rgb(130, 122, 175);
+  border: 2px solid #343a3f;
   width: 100px;
-  font-size: smaller;
 }
-/* input[type="submit"] {
-  display: flex;
-  width: 100px;
-} */
-input[type="button"]:hover,
-input[type="submit"]:hover {
-  display: flex;
-  width: 100px;
+button[type="button"]:hover {
   background-color: #a4ebdb;
   color: #2d1919;
 }
+
 /**
 serch form end
 */
 
-.content {
-  /* display: flex; */
+.daily-author {
   flex-direction: column;
-  /* background-color: #a4ebdb; */
   align-items: center;
 }
-.writer {
+.photo {
+  margin-left: 30px;
+}
+.left-part {
+  background-color: black;
+}
+.result {
   display: flex;
   padding: 20px 0;
   border-bottom: 2px solid #343a3f;
   width: 1000px;
   margin: auto;
 }
-.left-part {
-  margin-left: 30px;
-}
-.left-part img {
-  height: 200px;
-}
-.right-part {
+.info {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   margin-left: 80px;
 }
-.right-part a {
+.info a {
   text-decoration: none;
-}
-.right-part a :hover {
-  text-decoration: underline;
-  color: rgb(129, 74, 233);
-}
-.right-part a span {
   color: rgb(46, 46, 46);
   font-weight: 400;
   font-size: 21px;
-}
-.right-part .location,
-.date-of-birth {
-  color: rgb(46, 46, 46);
-  font-weight: 400;
-  font-size: 18px;
   font-style: italic;
+}
+.info a:hover {
+  text-decoration: underline;
+  color: rgb(129, 74, 233);
 }
