--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
 @import url('reset.css');
 @import url('bootstrap.min.css');
 @import url('home.css');
+@import url('author-info.css');
+@import url('timeline.css');
+@import url('works.css');
